# BrowseWith

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
resources/: README.md  browsewith.desktop  browsewith.xcf  config.json  defaults.list  dlls.txt  help.txt  icons.txt  windows.reg
src/: config.rs  main.rs  webclient.rs
src/config/: mod.rs  unix.rs  windows.rs
src/constants/: mod.rs
src/portable_executable/: mod.rs  structures.rs  types.rs
src/setup/: freebsd.rs  linux.rs  mod.rs  shared.rs  unix.rs  windows.rs
src/update/: mod.rs
