[package]
name = "browsewith"
description = "Select what browser to use when opening links from applications."
version = "0.1.0"
authors = ["Luis Tavares"]
edition = "2018"
license = "MIT"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "browsewith.exe"
FileDescription = "BrowseWith select browser to open URLs"
FileVersion = "0.1.0"
ProductVersion = "0.1.0"
ProductName = "BrowseWith"

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "glib" }
dirs = "1.0.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
url = "2.2.2"
base64 = "0.13.0"

[dependencies.gtk]
version = "0.14.3"
features = ["v3_22_29"]

[target.'cfg(unix)'.dependencies]
nix = "0.9.0"
bitflags = "1.3"
rust-ini = "0.18.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [ "shellapi", "wincon" ] }
windows = { version = "0.29.0", features = [ "Win32_UI_Shell", "Win32_Foundation", "Win32_System_Com", "Foundation", "System", "System_RemoteSystems", "Networking", "Win32_System_Registry", "Win32_Security" ] }
winreg = "0.10"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"