[package]
name = "browsewith"
description = "Select what browser to use when opening links from applications."
version = "1.0.0"
authors = ["Luis Tavares"]
edition = "2018"
license = "MIT"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "browsewith.exe"
FileDescription = "BrowseWith select browser to open URLs"
FileVersion = "1.0.0"
ProductVersion = "1.0.0"
ProductName = "BrowseWith"

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "glib" }
dirs = "1.0.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.97"
url = "2.3.1"
bitflags = "1.3"
regex = "1.8.3"
tokio = { version = "1", features = ["full"] }
ureq = { version = "2.7.1", features = ["json", "charset"] }
version-compare = "0.1.1"

[dependencies.gtk]
version = "0.17.1"
features = ["v3_24_30"]

[target.'cfg(unix)'.dependencies]
nix = "0.24.3"
rust-ini = "0.18.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [ "shellapi", "wincon" ] }
windows = { version = "0.32.0", features = [ "Win32_UI_Shell", "Win32_Foundation", "Win32_System_Com", "Foundation", "System", "System_RemoteSystems", "Networking", "Win32_System_Registry", "Win32_Security" ] }
winreg = "0.10"
is_elevated = "0.1.2"
base64 = "0.13.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
