[package]
name = "browsewith"
description = "Select what browser to use when opening links from applications."
version = "1.0.1"
authors = ["Luis Tavares"]
edition = "2018"
license = "MIT"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "browsewith.exe"
FileDescription = "BrowseWith select browser to open URLs"
FileVersion = "1.0.1"
ProductVersion = "1.0.1"
ProductName = "BrowseWith"

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "glib" }
dirs = "5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
bitflags = "2.6"
regex = "1.10"
tokio = { version = "1.39", features = ["full"] }
ureq = { version = "2.10", features = ["json", "charset"] }
version-compare = "0.2"

[dependencies.gtk]
version = "0.18"
features = ["v3_24_30"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = [ "user"] }
rust-ini = "0.21"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [ "shellapi", "wincon" ] }
windows = { version = "0.58", features = [ "Win32_UI_Shell", "Win32_Foundation", "Win32_System_Com", "Foundation", "System", "System_RemoteSystems", "Networking", "Win32_System_Registry", "Win32_Security" ] }
winreg = "0.52"
is_elevated = "0.1"
base64 = "0.22"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
